fix spacing

--- a/src/components/views/client/scss/components/_header.scss
+++ b/src/components/views/client/scss/components/_header.scss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     z-index: 999;
-    padding: 57px 2% 30px 5%;
+    padding: 30px 5%;
     width: 100%;
 
     .navbar-toggler {
