--- a/src/components/views/client/scss/components/clientHome/_proposeService.scss
+++ b/src/components/views/client/scss/components/clientHome/_proposeService.scss
@@ -1,5 +1,5 @@
 .ClProposeService {
-    padding: 189px 0 0 5%;
+    padding: 100px 0 0 5%;
 
     @include breakpoint-reverse(xx-large){
         padding: 189px 0 0;
